--- a/src/main/resources/assets/cracked/lang/en_us.json
+++ b/src/main/resources/assets/cracked/lang/en_us.json
@@ -1,5 +1,8 @@
 {
   "item.cracked.fracturer": "Fracturer",
+  "item.cracked.deepslate_fragment": "Deepslate Fragment",
+  "item.cracked.tuff_fragment": "Tuff Fragment",
+
 
   "block.cracked.cracked_polished_deepslate": "Cracked Polished Deepslate",
   "block.cracked.cracked_polished_tuff": "Cracked Polished Tuff"
