Fracturer Variants (Stone, Iron & Diamond)
Mod Version 0.2.0
Stone, Iron & Diamond Fracturer in-game,
license change in fabric.mod.json

--- a/src/main/resources/assets/cracked/lang/en_us.json
+++ b/src/main/resources/assets/cracked/lang/en_us.json
@@ -1,5 +1,8 @@
 {
-  "item.cracked.fracturer": "Fracturer",
+  "item.cracked.stone_fracturer": "Stone Fracturer",
+  "item.cracked.iron_fracturer": "Iron Fracturer",
+  "item.cracked.diamond_fracturer":"Diamond Fracturer",
+
   "item.cracked.deepslate_fragment": "Deepslate Fragment",
   "item.cracked.tuff_fragment": "Tuff Fragment",
 
